# commlib

./: Makefile  Makefile.in  README.md  aclocal.m4  build.sh  clean.sh  commfile.c  commfun.h  commnet.c  configure  configure.ac  testnet.c
autom4te.cache/: output.0  output.1  output.2  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
include/: commfun.h
src/: Makefile.am  Makefile.in  config.h.in  config.h.in~  gencompo4c.h  iself.c  myfcp.h  mylib4c.h  te
src/example/: Makefile.am  Makefile.in  acceptcli.c  acceptser.c  testdaemon.c  testfile.c  testnet.c  testos.c  testproc.c  testsignal.c  teststring.c
src/gencompo4c/: Makefile.am  Makefile.in  commfile.c  commnet.c  commos.c  commproc.c  general.c  general.h  list.h
src/myfcp/: Makefile.am  Makefile.in  basecomm.c  basecomm.h  commfile.c  commfile.h  commnet.c  commnet.h  commos.h  commproc.c  fcp_base.c  fcp_base.h  fcp_file.c  fcp_file.h  fcp_mm.c  fcp_mm.h  fcp_net.c  fcp_net.h  fcp_os.c  fcp_os.h  fcp_proc.c  fcp_proc.h  fcp_signal.c  fcp_signal.h  fcp_socket.c  fcp_socket.h  fcp_string.c  fcp_string.h  general.c  general.h  genlog.c  genlog.h  genmd5.c  genmd5.h  genmm.c  genmm.h  genstring.c  genstring.h
src/mylib4c/: Makefile.am  Makefile.in  basecomm.h  commfile.h  commos.c  commos.h  commproc.c  commproc.h  general.c  general.h  list.h
test/: testfile.c
